docs: add Skycfg deep dive - Starlark + Protobuf configuration
Add comprehensive documentation for Stripe's Skycfg:
- Overview and architecture
- Core concepts (proto module, type safety)
- Real-world examples (Kubernetes, Envoy)
- Built-in modules (hash, yaml, url, parallel)
- Context variables and testing support
- Comparison with Jsonnet, CUE, Helm, Pulumi
- Production considerations

Also fix Skycfg GitHub URL in resources (was pointing to wrong repo)

--- a/docs-website/src/content/docs/starlark/resources.mdx
+++ b/docs-website/src/content/docs/starlark/resources.mdx
@@ -78,7 +78,7 @@ Curated resources for learning and working with Starlark.
 
 | Tool | Description |
 |------|-------------|
-| [Skycfg](https://github.com/nicholaswmin/skycfg) | Protocol Buffer generation |
+| [Skycfg](https://github.com/stripe/skycfg) | Type-safe Protobuf configuration (Stripe) - [Deep Dive](/starlark/skycfg-deep-dive/) |
 | [ytt](https://carvel.dev/ytt/) | YAML templating with Starlark |
 
 ## Learning Resources
@@ -111,6 +111,7 @@ Curated resources for learning and working with Starlark.
 | [Bazel](https://bazel.build/) | Build system |
 | [Buck2](https://buck2.build/) | Build system |
 | [Tilt](https://tilt.dev/) | Kubernetes development |
+| [Skycfg](https://github.com/stripe/skycfg) | Protobuf configuration (Stripe) |
 | [Drone CI](https://drone.io/) | CI/CD pipelines |
 | [Kurtosis](https://kurtosis.com/) | Dev environments |
 | [Copybara](https://github.com/google/copybara) | Code transformation |
